--- a/styles.css
+++ b/styles.css
@@ -49,18 +49,8 @@ header {
     font-size: 0.9em; /* Slightly smaller font size for byline */
     color: #ccc;
     font-style: italic;
-    margin-top: 1px; /* Adjust to position correctly below the h1 */
+    margin-top: -5px; /* Adjust to position correctly below the h1 */
     text-align: right; /* Align the byline to the right */
-}
-
-.header-container .inactive, .footer-links .inactive {
-    pointer-events: none; /* Disable clicking */
-    color: #ccc; /* Change color to indicate inactive state */
-    cursor: default; /* Change cursor to default arrow */
-}
-
-.header-container .inactive:hover, .footer-links .inactive:hover {
-    text-decoration: none; /* Remove underline on hover */
 }
 
 header nav {
@@ -81,6 +71,16 @@ header nav ul li {
 header nav ul li a {
     color: #fff;
     text-decoration: none;
+}
+
+.header-container .inactive, .footer-links .inactive {
+    pointer-events: none; /* Disable clicking */
+    color: #ccc; /* Change color to indicate inactive state */
+    cursor: default; /* Change cursor to default arrow */
+}
+
+.header-container .inactive:hover, .footer-links .inactive:hover {
+    text-decoration: none; /* Remove underline on hover */
 }
 
 .banner {
@@ -218,13 +218,13 @@ footer {
     width: 80%;
     margin: 0 auto;
     padding: 50px 0;
+    text-align: center;
 }
 
 .contact-container h2 {
     font-size: 2.5em;
     color: #003366;
     margin-bottom: 20px;
-    text-align: center;
 }
 
 .contact-form {
@@ -267,13 +267,11 @@ footer {
     background-color: #0056b3;
 }
 
-.contact-info a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.contact-info a:hover {
-    text-decoration: underline;
+#response-message {
+    margin-top: 20px;
+    font-size: 1.2em;
+    color: #003366;
+    text-align: center;
 }
 
 .about-section {
