--- a/css/blog.css
+++ b/css/blog.css
@@ -66,7 +66,7 @@
 }
 
 .blog-post {
-    background-color: #f5f5f5;
+    background-color: #b0c7c3;
     border: 1px solid #b0c7c3;
     border-radius: 15px;
     padding: 25px;
@@ -82,7 +82,7 @@
 }
 
 .blog-post h2 {
-    color: #003366;
+    color: #c97b5a;
     margin-top: 0;
 }
 
