--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ main {
 
 .summary h3 {
     margin-bottom: 10px;
-    color: #FFA500; /* Orange color */
+    color: #c97b5a; /* Orange color */
 }
 
 .summary h3 a {
